hphp/test/slow/await-with-parens.php.expectf
Fatal error: Function 'foo' contains 'await' but is not declared as async. in %s on line 9
